--- a/styles/style.css
+++ b/styles/style.css
@@ -2,10 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
   /*nav*/
+header{
+    background-color:rgba(241, 241, 243, 1)
+}
 
 nav{
     display: flex;
     justify-content: space-between;
+    
 }
 .nav-button{
     box-sizing: border-box;
@@ -75,6 +79,10 @@ nav{
 .hero-content{
     padding: 117px 0px 117px 60px;
 
+}
+main{
+    background-color:rgba(241, 241, 243, 1)
+    
 }
 /* pillar-card */
 .pillar-card{
@@ -305,4 +313,53 @@ th{
     font-family: Fira Sans;
     font-size: 40px;
     font-weight: 700;
+}
+.news-section{
+    background-color: rgba(14, 14, 14, 0.15);;
+    box-sizing: border-box;
+    border-radius: 24px;
+    background: rgb(255, 255, 255);
+    margin-left: 160px; 
+    margin-right: 160px;  
+    display: flex;
+    justify-content: space-between;
+    padding: 48px;
+}
+.news-description{
+    padding-left: 24px;
+    font-family: Fira sans;
+}
+.news-btn{
+    color: rgb(255, 255, 255);
+    font-family: Fira Sans;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 8px;
+    background: rgb(0, 106, 80);
+    border: none;
+    padding: 13px 26px 13px 26px
+    
+}
+.news-image{
+    border-radius: 24px;
+}
+.news-title{
+    padding-left: 160px;
+    padding-right: 160px;
+    color: rgb(14, 14, 14);
+    font-family: Fira Sans;
+    font-size: 40px;
+    font-weight: 700;
+}
+.news-subtitle{
+    padding-left: 160px;
+    padding-right: 160px;
+    color: rgba(14, 14, 14, 0.7);
+    font-family: Fira Sans;
+    font-size: 16px;
+    font-weight: 400;
+
+}
+.last-news{
+    margin-top: 24px;
 }
