--- a/styles/style.css
+++ b/styles/style.css
@@ -2,8 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
   /*nav*/
+body{
+    background-color:rgba(241, 241, 243, 1) ;
+}
 header{
-    background-color:rgba(241, 241, 243, 1)
+    background-color:rgba(241, 241, 243, 1);
 }
 
 nav{
@@ -362,4 +365,122 @@ th{
 }
 .last-news{
     margin-top: 24px;
+}
+/* Donate style */
+.donate-box{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;  
+}
+.btn-donate{
+    box-sizing: border-box;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 16px;    
+    background: rgb(255, 255, 255);
+    width: 252px;
+    height: 128px;
+    text-align: center;
+    padding: 40px;   
+}
+.btn-donate:hover{
+    background-color:rgb(198, 228, 214) ;
+}
+
+.btn-text{
+    color: rgba(14, 14, 14, 0.8);
+    font-family: Fira Sans;
+    font-size: 30px;
+    font-weight: 700;
+}
+.form-1{
+    width: 100%;
+    padding: 24px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    
+    
+}
+.form-1 input{
+    border: none;
+    border-bottom: 1px solid rgb(255, 255, 255);
+    box-sizing: border-box;
+    border-bottom: 1px solid rgba(14, 14, 14, 0.15);
+    background: rgb(255, 255, 255);
+    width: 1032px;
+    height: 64px;
+    color: rgba(14, 14, 14, 0.3);
+    font-family: Fira Sans;
+    font-size: 20px;
+    font-weight: 400;
+   
+    
+}
+input::placeholder{
+    text-align: center;
+}
+.btn-done{
+    width: 151px;
+    height: 56px;
+    box-sizing: border-box;
+    border: 1px solid rgba(14, 14, 14, 0.1);
+    border-radius: 8px;
+    background: rgb(0, 106, 80);
+    font-family: Fira Sans;
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    font-weight: 600;
+        
+}
+.done{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;   
+}
+.donate-title{
+    text-align: center;
+    color: rgb(14, 14, 14);
+    font-family: Fira Sans;
+    font-size: 40px;
+    font-weight: 700;
+}
+.donate-subtitle{
+    padding-left: 248px;
+    padding-right: 248px;
+    text-align: center;
+    justify-content: center;
+    gap: 24px;
+    color: rgba(14, 14, 14, 0.7);
+    font-family: Fira Sans;
+    font-size: 16px;
+    font-weight: 400;    
+}
+/* footer */
+footer{
+    background-color: white;
+}
+.footer-title{
+    text-align: center;
+    padding: 10px;
+   
+    color: rgb(14, 14, 14);
+    font-family: Fira Sans;
+    font-size: 32px;
+    font-weight: 700
+    
+}
+.footer-image{
+    
+}
+    
+    
+    
+
+.footer-hr{
+    border: 1px solid rgba(14, 14, 14, 0.1);
 }
